# myshop_back

./: README.md
myshop_back/: .coverage  .gitignore  Makefile  pyproject.toml
myshop_back/src/: db.sqlite3
myshop_back/src/cart/: cart.py  context_processors.py  forms.py  urls.py  views.py
myshop_back/src/cart/templates/cart/: detail.html
myshop_back/src/cart/tests/: test_cart.py
myshop_back/src/myshop/: settings.py  urls.py
myshop_back/src/orders/: admin.py  forms.py  models.py  urls.py  views.py
myshop_back/src/orders/migrations/: 0001_initial.py
myshop_back/src/orders/templates/orders/order/: create.html  created.html
myshop_back/src/shop/: models.py  urls.py  views.py
myshop_back/src/shop/migrations/: 0001_initial.py
myshop_back/src/shop/templates/shop/product/: detail.html  list.html
myshop_back/src/shop/tests/: factories.py  test_models.py  test_templates.py
myshop_back/src/static/css/: custom.css
myshop_back/src/templates/: base.html
myshop_back/src/templates/includes/: navbar.html
