[project]
name = "myshop-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.8.1",
    "celery>=5.5.2",
    "coverage>=7.8.2",
    "django>=5.2.1",
    "factory-boy>=3.3.3",
    "flower>=2.0.1",
    "pillow>=11.2.1",
    "rabbitmq>=0.2.0",
    "sqlparse>=0.5.3",
]
